--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,64 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+/* Global */
+
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+	
+	font-family: 'Darker Grotesque', sans-serif;
+	font-size: 15px;
+	line-height: 1.5;
+	padding: 0;
+	margin: 0;
+	background-color: #fff;		
 }
 
-/* CSS main website */
+header {
+	min-height: 60px;
+}
+
+footer {
+	text-align: center;
+}
+
+.container {
+	
+	width:80%;
+	margin: auto;
+	overflow: hidden;
+	align-content: center;
+}
+
+/* Navigation */
+
+.main-nav {
+	float: right;
+	position: relative;
+}
+
+#logo {
+	
+	float:left;
+}
+
+nav a {
+	padding-top: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	display: inline;
+	text-decoration: none;
+	border-bottom: 3px solid transparent;
+}
+
+nav a:hover {
+	border-bottom: 3px solid #c93694;
+	color: #868a75;	
+}
+
+
+
+
 
 
