--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,21 @@ body {
 }
 
 header {
-	min-height: 60px;
+	background-color: #fff;
+	min-height: 100px;
+	box-shadow: 0 6px 6px -6px #423E48; 
 }
 
 footer {
+	
+	padding: 20px;
+	margin-top: 20px;
+	color: #FFFFFF;
+	background-color: #423E48;
 	text-align: center;
+	font-size: 18px;
+	width: 100%; 
+	height: 200px;
 }
 
 .container {
@@ -30,16 +40,20 @@ footer {
 /* Navigation */
 
 .main-nav {
+
 	float: right;
-	position: relative;
+	margin-top: 30px;
+	
 }
 
 #logo {
 	
 	float:left;
+	margin-top: 10px;
 }
 
 nav a {
+
 	padding-top: 30px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -47,18 +61,35 @@ nav a {
 	text-align: center;
 	font-size: 20px;
 	font-weight: bold;
+	color: #423E48;
 	display: inline;
 	text-decoration: none;
 	border-bottom: 3px solid transparent;
+	transition: 0.4s;
 }
 
+
+
 nav a:hover {
+
 	border-bottom: 3px solid #c93694;
 	color: #868a75;	
 }
 
 
-
-
-
-
+@media screen and (max-width: 500px) {
+	#logo {
+		
+	  float: none;
+	  display: block;
+	  text-align: left;
+		
+	}
+	
+	nav a {
+	  	float: none;
+	  	display: block;
+		width: 100%;
+		text-align: left;
+	}
+}
