--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,14 @@ body {
 }
 
 header {
-	background-color: #fff;
-	min-height: 100px;
-	box-shadow: 0 6px 6px -6px #423E48; 
+
+	background-color: #FFF;
+	height: 120px;
+	box-shadow: 0 6px 6px -6px #c93694; 
+	position: fixed;
+	transition: top 0.2s ease-in-out;
+	width: 100%;
+	opacity: 0.5;
 }
 
 footer {
@@ -27,6 +32,26 @@ footer {
 	font-size: 18px;
 	width: 100%; 
 	height: 200px;
+}
+
+.div-show-case {
+	
+  	opacity: 1;
+  	transition: opacity 2s linear;
+	text-align: center;
+	
+}
+
+#welcome {
+	position: absolute;
+	top: 60%;
+	right: 70%;
+	font-size: 30px;
+	color:#FFF;
+	padding: 15px;
+	font-family: 'Hepta Slab', serif;
+	border: 20px solid #FFF;
+
 }
 
 .container {
@@ -42,14 +67,14 @@ footer {
 .main-nav {
 
 	float: right;
-	margin-top: 30px;
+	margin-top: 40px;
 	
 }
 
 #logo {
 	
 	float:left;
-	margin-top: 10px;
+	margin-top: 0;
 }
 
 nav a {
@@ -57,11 +82,11 @@ nav a {
 	padding-top: 30px;
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-bottom: 20px;
+	padding-bottom: 30px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 24px;
 	font-weight: bold;
-	color: #423E48;
+	color: #000;
 	display: inline;
 	text-decoration: none;
 	border-bottom: 3px solid transparent;
@@ -72,8 +97,23 @@ nav a {
 
 nav a:hover {
 
-	border-bottom: 3px solid #c93694;
-	color: #868a75;	
+	background-color: #c93694;
+		
+}
+
+.show-case {
+
+	position: relative;
+	z-index: -1;	
+	min-height: 900px;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/file-3.jpeg') ;	
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	box-shadow: 0 8px 6px -6px black;
+	text-align: center;
+	font-size: 25px;
+	height:auto;
 }
 
 
@@ -93,3 +133,6 @@ nav a:hover {
 		text-align: left;
 	}
 }
+
+/* Animation */
+
