--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ header {
 	transition: top 0.2s ease-in-out;
 	width: 100%;
 	opacity: 0.5;
+	transition: all 0.6s;
+	z-index: 2;
+}
+
+.higher-opacity {
+	opacity: 1;
 }
 
 footer {
@@ -105,7 +111,7 @@ nav a:hover {
 
 	position: relative;
 	z-index: -1;	
-	min-height: 900px;
+	min-height: 1000px;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/file-3.jpeg') ;	
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -116,6 +122,58 @@ nav a:hover {
 	height:auto;
 }
 
+#aboutimage {
+
+	max-height: 500px;
+	width: 100%;
+	z-index: 1;	
+	filter: sepia(1);	
+}
+
+.div-ab-img {
+	
+	padding-right: 10px;
+	margin-left: 200px;
+	float: left;
+
+}
+
+.div-ab {
+
+	margin-top: 10px;
+	margin-bottom: 20px;
+	background-color: #0f0976;
+	height: 800px;
+	width: 100%;
+	box-shadow: 0 8px 6px -6px black;
+
+}
+
+.div-ab h1 {
+
+	padding: 20px;	
+	text-align: center;
+	font-family: 'Cinzel', serif;
+	font-size: 50px;
+	color: #FFEB00;
+	font-weight: 700;
+	
+}
+
+.div-ab-txt {
+	padding: 10px;	
+	margin-right: 80px;
+	float: right;
+	font-size: 30px;
+	color: #FFEB00;
+	width: 40%;
+}
+
+.div-ab-txt p {
+	margin-top: 0;
+	margin-right: 50px;
+	text-align: justify;
+}
 
 @media screen and (max-width: 500px) {
 	#logo {
